# commitgen

./: README.md  pyproject.toml
commitgen/: __init__.py  cli.py  diff.py  generate.py  hook.py  prompt.py
