[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitgen"
version = "0.1.0"
description = "AI-powered commit messages from your staged changes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pavan Kumar Dhruv", email = "pavankumardhruv@gmail.com" },
]
keywords = ["git", "commit", "ai", "llm", "developer-tools", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "anthropic>=0.39.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
ollama = ["httpx>=0.27.0"]

[project.scripts]
commitgen = "commitgen.cli:main"

[project.urls]
Homepage = "https://github.com/Pavankumardhruv/commitgen"
Repository = "https://github.com/Pavankumardhruv/commitgen"
Issues = "https://github.com/Pavankumardhruv/commitgen/issues"
